--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -1,13 +1,15 @@
 html {
     scroll-behavior: smooth;
-    background: url('matrixWebonWhite.svg');
+    /* background-image: url('matrixWebonWhite.svg'); */
+    background-color: black;
+    scroll-snap-type: y proximity;
 }
-
 
 body {
     
     margin-left: 10%;
     margin-right: 10%;
+    
 
 }
 
@@ -15,6 +17,10 @@ body {
     display:flex;
     height: 100%;
     
+}
+
+header {
+    align-items: right;
 }
 
 .scrollWheel {
@@ -35,46 +41,106 @@ body {
     opacity: 70%;
 }
 
-@keyframes rotate {
+.scrollCont {
+    /* scroll-snap-type: y mandatory; */
+
+}
+
+.scrollArea {
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
+    height: 100vh;
+    scroll-snap-align: start;
+    overflow: auto;
+    
+    /* scroll-snap-stop: normal; */
+}
+
+/* @keyframes rotate {
     to {
         transform: rotate(360deg);
     }
-}
+} */
 
-.loader {
-
-    position: fixed;
-    z-index: 9999;
-    background: url('whiteTiger.svg') 50% 50% no-repeat;
-    background-color: black;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 100%;
-    
-}
 
 .curricular {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     font-size: 4rem;
+    color: rgb(100, 100, 100);
+}
+
+.titleCont {
+    text-align: center;
+    background:
+    /* linear-gradient(to right, rgb(255, 255, 255) 4px, transparent 4px) 0 0, */
+    linear-gradient(to right, rgb(255, 255, 255) 4px, transparent 4px) 0 100%,
+    linear-gradient(to left, rgb(255, 255, 255) 4px, transparent 4px) 100% 0,
+    /* linear-gradient(to left, rgb(255, 255, 255) 4px, transparent 4px) 100% 100%, */
+    /* linear-gradient(to bottom, rgb(255, 255, 255) 4px, transparent 4px) 0 0, */
+    linear-gradient(to bottom, rgb(255, 255, 255) 4px, transparent 4px) 100% 0,
+    linear-gradient(to top, rgb(255, 255, 255) 4px, transparent 4px) 0 100%,
+    linear-gradient(to top, rgb(255, 255, 255) 4px, transparent 4px) 0 100%;
+
+
+    /* box-shadow: 
+        0 0 10px 5px #48abe0,
+        0 0 20px 7px #ebecca,
+        0 0 25px 20px #8a2be2,
+        0 0 30px 25px #ff1493; */
+    
+
+  background-repeat: no-repeat;
+  background-size: 5% 10%;
+  margin-bottom: 5%;
+}
+
+.credits {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 3rem;
+    color: white;
 }
 
 .ny {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 10rem;
-    line-height: 200px;
-    margin-bottom: 0;
+    font-size: 15rem;
+    color: white;
+    /* line-height: 200px; */
+    margin-bottom: 5%;
+    animation: glow 1s ease-in-out infinite alternate;
+    
 }
+
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 5px #fbbdff, 0 0 10px #fff, 0 0 20px #fff;
+    }
+    
+    to {
+      text-shadow: 0 0 5px #fff, 0 0 10px #fddfff, 0 0 12px #fddfff;
+    }
+  }
 
 .PROJNAME {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
-    font-size: 10rem;
-    line-height: 200px;
+    font-size: 8rem;
+    
     margin-bottom: 0;
     font-stretch: condensed;
+    color: white;
+}
+
+a.PROJLINK {
+    color: #fff;
+    text-decoration: none;
+    
+}
+
+a.PROJLINK:hover {
+    color: rgb(186, 186, 186);
 }
 
 
@@ -84,8 +150,9 @@ body {
     font-weight: 200;
     font-size: 5vw;
     line-height: 8vw;
-    margin-bottom: 0;
+    
     font-stretch: condensed;
+    position: flex;
 }
 
 .edu {
@@ -100,53 +167,72 @@ body {
 
 .descript {
     font-family: 'Courier New', Courier, monospace;
-    color: rgb(0, 0, 0);
+    color: white;
     line-height: 1.8;
     font-size: 1.1rem;
    
 }
 
+.navDiv {
+    margin-left: 30%;
+    margin-right: 30%;
+    justify-content: center;
+    /* border: 3px solid white; */
+}
+
+
+.mainCol {
+    position:relative;
+    text-align: left;
+    height: 100%;
+    width: 25%;
+    overflow:visible;
+    padding-left: 10px;
+    padding-right: 10px;
+    /* border: 1px solid white; */
+}
+
 #Navigation {
-    text-align: center;
-    font-size: 14px;
+
+    font-size: 2rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     letter-spacing: 2px; 
-    margin-right: 0%;
-    display:block;
+    display:flex;
+
 }
 
 #Navigation a {
     width: 100px;
+    
 }
 
-#Navigation a.tiger {
+.tiger {
     float: left;
-    margin-left: -25px;
-    padding-left: 0px;
-    width: 10px;
-    height: 10px;
+    margin-left: -8%;
+    position: fixed;
+    width: 5%;
+    height: 5%;
+
 
 }
 
-#Navigation ul {
-    justify-content: space-evenly;
-    
+.tiger:hover {
+    opacity: 80%;
 }
 
-#Navigation li {
-    list-style-type: none;
-    
-    text-align: center;
-    font-size: 14px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    letter-spacing: 2px; 
-    margin-right: 0%;
-    display:block;
-  }
 
-#Navigation a.linkt {
+
+
+/* #Navigation a.linkt {
+    float: left;
+}
+
+#Navigation a.matrix {
     float: right;
+    
+    
 }
+
 
 #Navigation a.resume {
     float: right;
@@ -154,17 +240,18 @@ body {
 
 #Navigation a.git {
     float: right;
-}
+} */
 
-#Navigation-nav {
+/* #Navigation-nav {
     margin-left: 0px;
     margin-right: 30px;  
     
-}
+} */
 
 #Navigation a:link {
+
     text-decoration: none;
-    color: rgb(85, 85, 85);
+    color: rgb(126, 126, 126);
     
 }
 
@@ -173,11 +260,11 @@ body {
 }
 
 #Navigation a:visited {
-    color: rgb(85, 85, 85);
+    color: rgb(126, 126, 126);
 }
 
 #Navigation a:hover {
-    color:black;
+    color:#fff;
 }
 
 /*
@@ -187,28 +274,31 @@ body {
 
 .row {
     display: flex;
-    height: 500px;
+    height: 30%;
     column-gap: 20px;
-}
+    border-color: white;
+    
+} */
 
-.row-end {
+ .row-end {
     display: flex;
-    height: 500px;
+    height: 30%;
     column-gap: 20px;
+    color: white;
 }
 
 .column {
     flex-grow: 1;
     position:relative;
     text-align: left;
-    outline-color: black;
-    outline: 5px solid;
+    /* outline-color: white; */
+    outline: 3px solid white;
     overflow: hidden;
     /* width: 33.3%; */
     
 }
 
-.column .overlay {
+/* .column .overlay {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -218,12 +308,12 @@ body {
     width: 100%;
     height: 0;
     transition: .5s ease;
-}
+} */
 
-.column:hover .overlay {
+/* .column:hover .overlay {
     height: 100%;
 
-}
+} */
 
 .ovPic {
     opacity: 15%;
@@ -248,7 +338,7 @@ a.caption {
     flex: auto;
 }
 
-.contact .overlay {
+/* .contact .overlay {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -258,16 +348,16 @@ a.caption {
     width: 100%;
     height: 0;
     transition: .5s ease;
-}
+} */
 
-.contact:hover .overlay {
+/* .contact:hover .overlay {
     height: 100%;
 }
 
 a.caption:hover {
     opacity: 50%;
     
-}
+} */
 
 a.caption:visited {
     color: white;
@@ -290,7 +380,7 @@ footer {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     color: rgb(85, 85, 85);
-    text-align: right;
+    text-align: center;
 }
 
 .courier {
@@ -319,20 +409,27 @@ footer {
     
 } */
 
-.footer a.bstars {
-    
+.header a.bstars {
+    float: right;
     width: 10px;
     height: 10px;
+    
+}
+
+.resumeBoi {
+    padding-bottom: 10px;
+    height: 100%;
 }
 
 
 .resumeBruh {
     background-color: black;
     border-radius: 1%;
+    
 }
 
 .resume-header {
-    margin-left: 5%;
+    
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
     font-size: 20px;
@@ -405,18 +502,23 @@ footer {
   animation: cursor-blink 1.5s steps(2) infinite;
 }
 
+.contactInfo {
+    
+}
+
 .contactMe {
     
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.3rem;
-    color: rgb(0, 0, 0);
+    color: #fff;
     font-weight:700;
 }
 
 .myInfo {
     font-family: 'Courier New', Courier, monospace;
     font-size: 2.5rem;
+    color: #fff;
     
 }
 
@@ -443,140 +545,300 @@ a.bstars:hover {
     opacity: 75%;
 }
 
-.credits {
-    font-family: 'Courier New', Courier, monospace;
-    color: rgb(0, 0, 0);
-    line-height: 1.8;
-    font-size: 18px;
-    text-align: center;
-}
 
 #hamburger-input{
     display: none;
-  }
+}
   
-  #hamburger-menu {
-      position: fixed;
-      background-color: white;
-      z-index: 1;
-      top: 60px;
-      right: 5%;
-      width: 30px;
-      height: 30px;
-      display: none;
-      border: none;
-      padding: 0px;
-      margin: 0px;
-      font-family: 'Cabin', Sans-serif;
-      transition: all 300ms ease;
-      background: linear-gradient(
-        to bottom, 
-        black, black 20%, 
-        white 20%, white 40%, 
-        black, black 60%, 
-        white 60%, white 80%, 
-        black 80%, black 100%
-      );
-  }
+#hamburger-menu {
+    position: fixed;
+    background-color: white;
+    z-index: 1;
+    top: 60px;
+    right: 5%;
+    width: 30px;
+    height: 30px;
+    display: none;
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Cabin', Sans-serif;
+    transition: all 300ms ease;
+    background: linear-gradient(
+    to bottom, 
+    black, black 20%, 
+    white 20%, white 40%, 
+    black, black 60%, 
+    white 60%, white 80%, 
+    black 80%, black 100%
+    );
+}
   
-  #hamburger-menu #sidebar-menu {
-      visibility: hidden;
-      position: fixed;
-      top: 0;
-      right: -250px;
-      width: 50%;
-      height: 100%;
-      background-color: rgb(200, 36, 222);
-      transition: 0.3s;
-      padding: 0px 10px;
-      box-sizing: border-box;
-  }
-/*   
-  #hamburger-menu h3 {
-    color: #B9FAF8;
-    font-size: 2.2rem;
-  } */
-  
-  #hamburger-menu ul {
-    padding-right: 0px;
-  }
-  
-  #hamburger-menu li {
-    list-style-type: none;
-    line-height: 3rem;
-  }
-  
-  #hamburger-menu a {
-    color: black;
-    font-size: 1.3rem;
-    text-decoration: none;
-  }
-  
-  #hamburger-menu a:hover {
-    color: rgb(85, 85, 85);
-  }
-  
-  #hamburger-input:checked + #hamburger-menu #sidebar-menu {
-    visibility: visible;
-    right: 0;
-  }
-  #hamburger-input:checked ~ .overlay{
-    visibility: visible;
-    opacity: 0.4;
-  }
-  
-  
-  @media screen and (max-width: 750px) {
+#hamburger-menu #sidebar-menu {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    right: -250px;
+    width: 50%;
+    height: 100%;
+    background-color: rgb(200, 36, 222);
+    transition: 0.3s;
+    padding: 0px 10px;
+    box-sizing: border-box;
+}
 
-    body {
-      margin-right: 17%;
+
+#hamburger-menu ul {
+padding-right: 0px;
+}
+
+#hamburger-menu li {
+list-style-type: none;
+line-height: 3rem;
+}
+
+#hamburger-menu a {
+color: black;
+font-size: 1.3rem;
+text-decoration: none;
+}
+
+#hamburger-menu a:hover {
+color: #fff;
+}
+
+#hamburger-input:checked + #hamburger-menu #sidebar-menu {
+visibility: visible;
+right: 0;
+}
+#hamburger-input:checked ~ .overlay{
+visibility: visible;
+opacity: 0.4;
+}
+  
+
+
+@media screen and (max-width: 1200px) {
+
+    .titleCont {
+        text-align: center;
+        background:none;
+        /* linear-gradient(to right, rgb(255, 255, 255) 4px, transparent 4px) 0 0,
+        linear-gradient(to right, rgb(255, 255, 255) 4px, transparent 4px) 0 100%,
+        linear-gradient(to left, rgb(255, 255, 255) 4px, transparent 4px) 100% 0,
+        /* linear-gradient(to left, rgb(255, 255, 255) 4px, transparent 4px) 100% 100%, */
+        /* linear-gradient(to bottom, rgb(255, 255, 255) 4px, transparent 4px) 0 0, */
+        /* linear-gradient(to bottom, rgb(255, 255, 255) 4px, transparent 4px) 100% 0,
+        linear-gradient(to top, rgb(255, 255, 255) 4px, transparent 4px) 0 100%,
+        linear-gradient(to top, rgb(255, 255, 255) 4px, transparent 4px) 0 100%; */
+    
+    
+        /* box-shadow: 
+            0 0 10px 5px #48abe0,
+            0 0 20px 7px #ebecca,
+            0 0 25px 20px #8a2be2,
+            0 0 30px 25px #ff1493; */
+        
+    
+      /* background-repeat: no-repeat;
+      background-size: 5% 10%; */ 
+      margin-bottom: 5%;
+    }
+
+}
+
+@media screen and (max-width: 1200px) {
+
+    .ny {
+        
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 200;
+        font-size: 12rem;
+        
+        line-height: 80%;
+        padding-bottom: 30px;
+        
     }
 
     #Navigation {
-      display: none;
+        display: none;
+        
     }
     #hamburger-menu {
-      display: inline;
+        display: inline;
     }
 
-    .PROJNAME {
-        font-size: 50px;
-    }
 
     a.caption {
         font-size: 20px;
     }
 
-    .row {
-        display:block;
-        height: 500px;
-        column-gap: 500px;
-        padding-bottom: 90px;
+    .scrollArea {
+        /* border: 1px solid white; */
+        min-height: 100vh;
+        scroll-snap-stop: always;
         
     }
+
+    .resumeBoi {
+        overflow: auto;
+        
+    }
+
     
+
     .row-end {
         display:block;
         height: 500px;
         column-gap: 500px;
         
+        
     }
-    
+
+    .PROJNAME {
+        font-size: 5rem;
+        text-align: center;
+        
+    }
+
+    a.PROJLINK {
+        color: #fff;
+        text-decoration: none;
+        
+    }
+
+    a.PROJLINK:hover {
+        color: rgb(85, 85, 85);
+    }
+
 
     .column {
         flex-grow: 1;
         text-align: left;
-        outline-color: black;
-        outline: 5px solid;
+        outline: 5px solid white;
         overflow: hidden;
         width: 100%;
         row-gap: 100px;
         /* width: 33.3%; */
         
+    } 
+
+    .header {
+        visibility: hidden;
     }
 
-  }
+    
 
-  .hamburger-menue {
-    background-color: azure;
-  }
+
+
+    .hamburger-menue {
+        background-color: azure;
+    }
+}
+
+  
+@media screen and (max-width: 1000px) {
+
+    
+
+    html {
+        scroll-snap-type: y mandatory;
+    }
+
+
+    body {
+        margin-right: 17%;
+    }
+
+    .titleCont {
+        align-items: left;
+    }
+
+    .ny {
+        
+        margin-top: 50%;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-weight: 200;
+        font-size: 12rem;
+        line-height: 80%;
+        writing-mode:horizontal-tb;
+        transform: rotate(-90deg);
+        letter-spacing: 20px;
+        
+    }
+
+    #Navigation {
+        display: none;
+        
+    }
+    #hamburger-menu {
+        display: inline;
+    }
+
+
+    a.caption {
+        font-size: 20px;
+    }
+
+    .scrollArea {
+        /* border: 1px solid white; */
+        min-height: 100vh;
+        scroll-snap-stop: always;
+        
+    }
+
+    .resumeBoi {
+        overflow: auto;
+        
+    }
+
+    
+
+    .row-end {
+        display:block;
+        height: 500px;
+        column-gap: 500px;
+        
+        
+    }
+
+    .PROJNAME {
+        font-size: 5rem;
+        text-align: center;
+        
+    }
+
+    a.PROJLINK {
+        color: #fff;
+        text-decoration: none;
+        
+    }
+
+    a.PROJLINK:hover {
+        color: rgb(85, 85, 85);
+    }
+
+
+    .column {
+        flex-grow: 1;
+        text-align: left;
+        outline: 5px solid white;
+        overflow: hidden;
+        width: 100%;
+        row-gap: 100px;
+        /* width: 33.3%; */
+        
+    } 
+
+    .header {
+        visibility: hidden;
+    }
+
+    
+
+
+
+    .hamburger-menue {
+        background-color: azure;
+    }
+}
